--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Shop Homepage - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='assets/favicon.icon') }}"/>
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -55,34 +55,31 @@
         <!-- Section-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
-                {% for popular_game in popular_games %}
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    {% for popular_game in popular_games %}
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <a href="{{ popular_game[href]|safe}}">
-                                {{ popular_game.find('div', attrs={'data-testid':'picture'}).find('img') |safe}}
+                            <a href="{{ popular_game['href']|safe}}">
+                                {{ popular_game.find('div', attrs={'class':'css-1lozana'}).find('img') |safe}}
                             </a>
                             <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">
-                                        <a href="{{ popular_game[href]|safe}}">
-                                            {{ popular_game.find('div', attrs={'class':'css-0'}).text |safe}}
-                                        </a>
-                                    </h5>
-                                    <!-- Product price-->
-                                    <p>
-                                        {{ popular_game.find('div', attrs={'class':'css-1x8w2lj'}).text |safe}}
-                                    </p>
-                                </div>
+                            <div class="card-body">
+                                <!-- Product name-->
+                                <h5 class="fw-bolder">
+                                    <a href="{{ popular_game['href']|safe}}">
+                                        {{ popular_game.find('div', attrs={'class':'css-0'}).text |safe}}
+                                    </a>
+                                </h5>
+                                <!-- Product price-->
+                                <p class="card-text">
+                                    {{ popular_game.find('div', attrs={'class':'css-1x8w2lj'}).text |safe}}
+                                </p>
                             </div>
                         </div>
                     </div>
-                {% endfor %}
+                    {% endfor %}
                 </div>
             </div>
-
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
